--- a/about_us/about_us.html
+++ b/about_us/about_us.html
@@ -1,1 +1,79 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="about_us.css">
+    <link rel="stylesheet" href="../style.css">
+    <title>about</title>
+</head>
+<body>
+    <div class="nav">
+        <img class="js-logo" src="../images/JS_logo.png" />
+            <a class="links" href="../main/index.php">Գլխավոր</a href=""> 
+            <a class="links" style="left: 550px;" href="../testing_rules/testing_rules.html">Թեստեր</a href="">
+            <a class="links main-page" style="left: 750px;" href="about_us.html">Մեր մասին</a href="">
+            <img class="earth-icon" src="../images/icons8-earth-50.png" />
+            <div class="earth-text">AM</div>
+            <div class="nav-line"></div>
+            <div style="width: 36px; height: 39px; left: 1130px; top: 24px; position: absolute">
+                <img src="../images/icons8-search-30 (2).png" class="search-icon" alt="">
+            </div>
+            <div class="open-user"></div>
+            <!-- user window open -->
+            <div class="user-window">
+                <img class="tringle-icon" src="../images/icons8-triangle-40.png" alt="" srcset="">
+                <img class="user-icon" src="../images/male_user.png" alt="" srcset="">
+                <p class="user-name">Անուն Ազգանուն</p>
+                <span>120 <img src="../images/icons8-star-96.png" alt="" srcset=""></span>
+                <button class="log-out-user">Դուրս գալ</button>
+                <img class="settings-icon" src="../images/icons8-settings-50.png" alt="" srcset="">
+            </div>
+    </div>
 
+    <div class="content">
+
+        <div class="about-proj">
+            <p>Աշխատանքի մասին</p>
+            <div>Your JS կայքը հնարավորինս կփորձի օգնել սկսնակ ծրագրավորողներին հասկանալ ծրագրավորման գաղափարը՝ մասնավորապես JavaScript լեզվի ուսումնասիրությամբ։ 
+            </div>
+        </div>
+        <div class="about-prog-bg"></div>
+
+        <div class="about-proj-mail">
+            <p class="contact_us_title">Կապ մեզ հետ</p>
+            <p class="mail">Gmail</p>
+            <div>admin_js@gmail.com</div>
+        </div>
+        <div class="about-prog-mail-bg"></div>
+
+        <p class="dev-title">Developers</p>
+        <div class="developers-box">
+            <div>
+                <div class="img"><img src="../images/male_user.png" alt="" srcset=""></div>
+                <div>
+                    <p class="name">Անուն Ազգանուն</p>
+                    <div class="dev-info">Основатель, тренер, разработчик<br>Հայաստան, Երևան</div>
+                </div>
+            </div>
+            <div>
+                <div class="img"><img src="../images/female_user.png" alt="" srcset=""></div>
+                <div>
+                    <p class="name">Անուն Ազգանուն</p>
+                    <div class="dev-info">Основатель, тренер, разработчик<br>Հայաստան, Երևան</div>
+                </div>
+            </div>
+            <div>
+                <div class="img"><img src="../images/female_user.png" alt="" srcset=""></div>
+                <div>
+                    <p class="name">Անուն Ազգանուն</p>
+                    <div class="dev-info">Основатель, тренер, разработчик<br>Հայաստան, Կոտայք</div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <script src="../functions.js"></script>
+</body>
+</html>
